update README Remove information about how to run as jruby rack server, add instruction on running as vertx module.